Исправлены ошибки связянные с одаптацией

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -145,7 +145,7 @@
                         <br>
                     </div>
                     <div class="container d-flex align-items-center justify-content-center">
-                        <dev class="phone_wb">Мы современая компания с быстрыми и уникальными решениями для вашего бизнеса. На данном рынке более 20 лет, мы постоянно развиваемся и не стоим на месте. У нас очень уютный офис, в котором вас всегда встретят с улыбкой и угостят вкусным кофе. Обслуживаясь в нашей компании, вы получаете не просто бухгалтера, а целую команду специалистов, которые сделают все для того, чтобы Вы получили максимальную пользу и комфорт.</dev></div>
+                        <dev class="phone_wb" style="padding-bottom: 5%;padding-left: 5%; padding-right: 5%;">Мы современая компания с быстрыми и уникальными решениями для вашего бизнеса. На данном рынке более 20 лет, мы постоянно развиваемся и не стоим на месте. У нас очень уютный офис, в котором вас всегда встретят с улыбкой и угостят вкусным кофе. Обслуживаясь в нашей компании, вы получаете не просто бухгалтера, а целую команду специалистов, которые сделают все для того, чтобы Вы получили максимальную пользу и комфорт.</dev></div>
                     <br>
                     <br>
                     <br>
@@ -184,7 +184,7 @@
     </div>
 </section>
 <section id="services" style="background: #f5f5f5">
-    <div class="container" style='overflow: hidden; margin-left: 5%; margin-right: 5%;'>
+    <div class="container" style='overflow: hidden; margin-left: 15%; margin-right: 15%;'>
 
         <div class="row">
             <br>
@@ -217,8 +217,15 @@
                     <div class="content_eff-overlay"></div>
                     <img class="content_eff-image" src="{% static 'main/img/Кадр c5761e1e55f6a52cdaa468846d6ddb90.png' %}">
                     <div class="content_eff-details fadeIn-top">
-                        <h3>This is a title</h3>
-                        <p>This is a short description</p>
+                        <h5>Бухгалтерское обслуживание</h5>
+                        <p>Подготовим платёжки, счета,
+                            накладные. Проведем сверки.
+                            Сдадим отчеты.
+                            Правильно трудоустроим
+                            сотрудников,
+                            начислим зарплату,
+                            оформим отпуск и больничный.
+                            Быстро разблокируем счет</p>
                     </div>
                 </div>
             </div>
@@ -228,8 +235,15 @@
                     <div class="content_eff-overlay"></div>
                     <img class="content_eff-image" src="{% static 'main/img/Кадр c5761e1e55f6a52cdaa468846d6ddb90.png' %}">
                     <div class="content_eff-details fadeIn-top">
-                        <h3>This is a title</h3>
-                        <p>This is a short description</p>
+                        <h5>Бухгалтерское обслуживание</h5>
+                        <p>Подготовим платёжки, счета,
+                            накладные. Проведем сверки.
+                            Сдадим отчеты.
+                            Правильно трудоустроим
+                            сотрудников,
+                            начислим зарплату,
+                            оформим отпуск и больничный.
+                            Быстро разблокируем счет</p>
                     </div>
                 </div>
             </div>
@@ -239,8 +253,15 @@
                     <div class="content_eff-overlay"></div>
                     <img class="content_eff-image" src="{% static 'main/img/Кадр c5761e1e55f6a52cdaa468846d6ddb90.png' %}">
                     <div class="content_eff-details fadeIn-top">
-                        <h3>This is a title</h3>
-                        <p>This is a short description</p>
+                        <h5>Бухгалтерское обслуживание</h5>
+                        <p>Подготовим платёжки, счета,
+                            накладные. Проведем сверки.
+                            Сдадим отчеты.
+                            Правильно трудоустроим
+                            сотрудников,
+                            начислим зарплату,
+                            оформим отпуск и больничный.
+                            Быстро разблокируем счет</p>
                     </div>
                 </div>
             </div>
@@ -250,8 +271,15 @@
                     <div class="content_eff-overlay"></div>
                     <img class="content_eff-image" src="{% static 'main/img/Кадр c5761e1e55f6a52cdaa468846d6ddb90.png' %}">
                     <div class="content_eff-details fadeIn-top">
-                        <h3>This is a title</h3>
-                        <p>This is a short description</p>
+                        <h5>Бухгалтерское обслуживание</h5>
+                        <p>Подготовим платёжки, счета,
+                            накладные. Проведем сверки.
+                            Сдадим отчеты.
+                            Правильно трудоустроим
+                            сотрудников,
+                            начислим зарплату,
+                            оформим отпуск и больничный.
+                            Быстро разблокируем счет</p>
                     </div>
                 </div>
             </div>
@@ -261,8 +289,15 @@
                     <div class="content_eff-overlay"></div>
                     <img class="content_eff-image" src="{% static 'main/img/Кадр c5761e1e55f6a52cdaa468846d6ddb90.png' %}">
                     <div class="content_eff-details fadeIn-top">
-                        <h3>This is a title</h3>
-                        <p>This is a short description</p>
+                        <h5>Бухгалтерское обслуживание</h5>
+                        <p>Подготовим платёжки, счета,
+                            накладные. Проведем сверки.
+                            Сдадим отчеты.
+                            Правильно трудоустроим
+                            сотрудников,
+                            начислим зарплату,
+                            оформим отпуск и больничный.
+                            Быстро разблокируем счет</p>
                     </div>
                 </div>
             </div>
@@ -272,8 +307,15 @@
                     <div class="content_eff-overlay"></div>
                     <img class="content_eff-image" src="{% static 'main/img/Кадр c5761e1e55f6a52cdaa468846d6ddb90.png' %}">
                     <div class="content_eff-details fadeIn-top">
-                        <h3>This is a title</h3>
-                        <p>This is a short description</p>
+                        <h5>Бухгалтерское обслуживание</h5>
+                        <p>Подготовим платёжки, счета,
+                            накладные. Проведем сверки.
+                            Сдадим отчеты.
+                            Правильно трудоустроим
+                            сотрудников,
+                            начислим зарплату,
+                            оформим отпуск и больничный.
+                            Быстро разблокируем счет</p>
                     </div>
                 </div>
             </div>
@@ -283,8 +325,15 @@
                     <div class="content_eff-overlay"></div>
                     <img class="content_eff-image" src="{% static 'main/img/Кадр c5761e1e55f6a52cdaa468846d6ddb90.png' %}">
                     <div class="content_eff-details fadeIn-top">
-                        <h3>This is a title</h3>
-                        <p>This is a short description</p>
+                        <h5>Бухгалтерское обслуживание</h5>
+                        <p>Подготовим платёжки, счета,
+                            накладные. Проведем сверки.
+                            Сдадим отчеты.
+                            Правильно трудоустроим
+                            сотрудников,
+                            начислим зарплату,
+                            оформим отпуск и больничный.
+                            Быстро разблокируем счет</p>
                     </div>
                 </div>
             </div>
@@ -294,17 +343,18 @@
                     <div class="content_eff-overlay"></div>
                     <img class="content_eff-image" src="{% static 'main/img/Кадр c5761e1e55f6a52cdaa468846d6ddb90.png' %}">
                     <div class="content_eff-details fadeIn-top">
-                        <h3>Бухгалтерское обслуживание</h3>
-                        <p>This is a short description</p>
+                        <h5>Бухгалтерское обслуживание</h5>
+                        <p>Подготовим платёжки, счета,
+                            накладные. Проведем сверки.
+                            Сдадим отчеты.
+                            Правильно трудоустроим
+                            сотрудников,
+                            начислим зарплату,
+                            оформим отпуск и больничный.
+                            Быстро разблокируем счет</p>
                     </div>
                 </div>
             </div>
-
-            <div class="container_eff">
-                <div class="content_eff">
-                </div>
-            </div>
-
 
         <hr>
 
