Добавлен блок, улучшена одаптация

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -95,7 +95,7 @@
 <section id="headers"></section>
 <header id="header">
 
-    <div class = "container" style="max-width: 100%">
+    <div class = "container" style="max-width: 1350px; margin:0 auto;">
         <div class = "row">
             <div class="col-12">
 
@@ -162,19 +162,19 @@
             <div class="position-relative nuvmers_bg">
                 <div class="container d-flex align-items-center justify-content-center phone_zg" style="margin-top: 60px;">О нас в цифрах</div>
                 <div class="container d-flex align-items-center justify-content-center phone_zg" style="margin-top: 50px;">
-                    <div style="margin-right: 5%; margin-left: 5%; color: #e50e3a; white-space: nowrap">
+                    <div class="" style="margin-right: 5%; margin-left: 5%; color: #e50e3a; white-space: nowrap">
                         <span data-toggle="counter-up" style="margin-left: 5%;">20</span> лет
                         <div class="text_o_nas text-center">Успешной работы<br> нашей фирмы</div>
                     </div>
-                    <div style="margin-right: 5%; margin-left: 5%; color: #e50e3a">
+                    <div class="" style="margin-right: 5%; margin-left: 5%; color: #e50e3a">
                         <span data-toggle="counter-up" style="margin-left: 20%;">200 </span>
                         <div class="text_o_nas text-center">Обслуживаемых<br>компаний</div>
                     </div>
-                    <div style="margin-right: 5%; margin-left: 5%; color: #e50e3a">
+                    <div class="" style="margin-right: 5%; margin-left: 5%; color: #e50e3a">
                         <span data-toggle="counter-up" style="margin-left: 5%;">800000</span>+
                         <div class="text_o_nas text-center">Сданных<br>отчетов</div>
                     </div>
-                    <div style="margin-right: 5%; margin-left: 5%; color: #e50e3a; white-space: nowrap">
+                    <div class="" style="margin-right: 5%; margin-left: 5%; color: #e50e3a; white-space: nowrap">
                         <span data-toggle="counter-up">100</span> млн руб
                         <div class="text_o_nas text-center">Экономии денег<br>наших клиентов</div>
                     </div>
@@ -208,6 +208,8 @@
                             начислим зарплату,
                             оформим отпуск и больничный.
                             Быстро разблокируем счет</p>
+                        <p>От 5000 рублей</p>
+                        <a href="" class="btn hvr-hollow btn-lg">оставить заявку</a>
                     </div>
                 </div>
             </div>
@@ -226,6 +228,7 @@
                             начислим зарплату,
                             оформим отпуск и больничный.
                             Быстро разблокируем счет</p>
+                        <a href="" class="btn hvr-hollow btn-lg">оставить заявку</a>
                     </div>
                 </div>
             </div>
@@ -244,6 +247,7 @@
                             начислим зарплату,
                             оформим отпуск и больничный.
                             Быстро разблокируем счет</p>
+                        <a href="" class="btn hvr-hollow btn-lg">оставить заявку</a>
                     </div>
                 </div>
             </div>
@@ -262,6 +266,7 @@
                             начислим зарплату,
                             оформим отпуск и больничный.
                             Быстро разблокируем счет</p>
+                        <a href="" class="btn hvr-hollow btn-lg">оставить заявку</a>
                     </div>
                 </div>
             </div>
@@ -280,6 +285,7 @@
                             начислим зарплату,
                             оформим отпуск и больничный.
                             Быстро разблокируем счет</p>
+                        <a href="" class="btn hvr-hollow btn-lg">оставить заявку</a>
                     </div>
                 </div>
             </div>
@@ -298,6 +304,7 @@
                             начислим зарплату,
                             оформим отпуск и больничный.
                             Быстро разблокируем счет</p>
+                        <a href="" class="btn hvr-hollow btn-lg">оставить заявку</a>
                     </div>
                 </div>
             </div>
@@ -316,6 +323,7 @@
                             начислим зарплату,
                             оформим отпуск и больничный.
                             Быстро разблокируем счет</p>
+                        <a href="" class="btn hvr-hollow btn-lg">оставить заявку</a>
                     </div>
                 </div>
             </div>
@@ -334,6 +342,7 @@
                             начислим зарплату,
                             оформим отпуск и больничный.
                             Быстро разблокируем счет</p>
+                        <a href="" class="btn hvr-hollow btn-lg">оставить заявку</a>
                     </div>
                 </div>
             </div>
@@ -352,13 +361,37 @@
                             начислим зарплату,
                             оформим отпуск и больничный.
                             Быстро разблокируем счет</p>
+                        <a href="" class="btn hvr-hollow btn-lg">оставить заявку</a>
                     </div>
                 </div>
             </div>
 
-        <hr>
+            <div class="content_eff">
 
+            </div>
+            <hr>
+        </div>
     </div>
+</section>
+<section id="about_work" style="overflow: hidden;">
+    <div class="container">
+        <div class="col-lg-12 text-center">
+            <p><br></p>
+            <div class="phone_zg">Как мы работаем</div>
+            <p></p>
+            <img class="img-fluid col-12" style="max-width: 80%;" src="{% static 'main/img/img.png' %}">
+            <div class="col-12" style="padding-right: 5%; padding-left: 5%;">
+                <div class="row">
+                    <div class="col-3 text-center phone_wb"><p style="font-family: Rubik-ext">Оставьте <a href="" style="color: #e50e3a; text-decoration: none;">заявку</a></p></div>
+                    <div class="col-1"></div>
+                    <div class="col-4 text-center phone_wb"><p style="font-family: Rubik-ext">Мы позвоним.</p>
+                        <p style="font-family: Rubik_rg">Наш специалист свяжиться с вами и обсудит все вопросы.</p></div>
+                    <div class="col-1"></div>
+                    <div class="col-3 text-center phone_wb"><p style="font-family: Rubik-ext">Выполняем работу.</p>
+                        <p style="font-family: Rubik_rg">Указываем перечень работ, сроки, стоимость и порядок уплаты.</p></div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 </div>
