--- a/Businessas/main/static/main/css/style.css
+++ b/Businessas/main/static/main/css/style.css
@@ -351,3 +351,28 @@ h1{
 .fadeIn-right{
   left: 80%;
 }
+
+.btn.hvr-hollow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: background;
+  transition-property: background;
+  box-shadow: inset 0 0 0 0px #e51739, 0 0 1px rgba(0, 0, 0, 0);
+  background: #e51739;
+  max-width: 80%;
+  color: white;
+  font-size: 10px;
+}
+
+.btn.hvr-hollow:hover,.btn.hvr-hollow:focus,.btn.hvr-hollow:active {
+  background: white;
+  color: black;
+}
