--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -118,8 +118,8 @@
 </header>
 <div class="container" style="max-width: 100%; overflow: hidden">
     <div class ="row" style="margin-top: 103px;">
-        <div class="col-6 block_1"><img class="img-fluid" src="{% static 'main/img/ob_photo.png' %}"></div>
-        <div class="col-6 block_1 ">
+        <div class="col-lg-6 block_1"><img class="img-fluid" src="{% static 'main/img/ob_photo.png' %}"></div>
+        <div class="col-lg-6 block_1 ">
             <div class="col-12">
                 <h1 class="text-left" style="margin-left: 2%;"><span style="color: #e50e3a">Б</span>изнес <span style="color: #e50e3a">А</span>ссистент</h1>
                 <div class="my_txt text-left">Полный спектр услуг  для успешного ведения бизнеса</div>
@@ -159,28 +159,29 @@
 <section id="nuvmers">
     <div class="container" style="max-width: 100%; overflow: hidden">
         <div class="row">
-            <div class="position-relative nuvmers_bg">
-                <div class="container d-flex align-items-center justify-content-center phone_zg" style="margin-top: 60px;">О нас в цифрах</div>
-                <div class="container d-flex align-items-center justify-content-center phone_zg" style="margin-top: 50px;">
-                    <div class="" style="margin-right: 5%; margin-left: 5%; color: #e50e3a; white-space: nowrap">
-                        <span data-toggle="counter-up" style="margin-left: 5%;">20</span> лет
-                        <div class="text_o_nas text-center">Успешной работы<br> нашей фирмы</div>
-                    </div>
-                    <div class="" style="margin-right: 5%; margin-left: 5%; color: #e50e3a">
-                        <span data-toggle="counter-up" style="margin-left: 20%;">200 </span>
-                        <div class="text_o_nas text-center">Обслуживаемых<br>компаний</div>
-                    </div>
-                    <div class="" style="margin-right: 5%; margin-left: 5%; color: #e50e3a">
-                        <span data-toggle="counter-up" style="margin-left: 5%;">800000</span>+
-                        <div class="text_o_nas text-center">Сданных<br>отчетов</div>
-                    </div>
-                    <div class="" style="margin-right: 5%; margin-left: 5%; color: #e50e3a; white-space: nowrap">
-                        <span data-toggle="counter-up">100</span> млн руб
-                        <div class="text_o_nas text-center">Экономии денег<br>наших клиентов</div>
-                    </div>
-                </div>
+            <div class="col-12 text-center phone_zg" style="margin-top: 60px;">О нас в цифрах</div>
             </div>
-        </div>
+        <div class="row phone_zg text-center" style="margin-top: 50px;">
+            <div class="col-lg-1"></div>
+            <div class="col-md-6 col-lg-3" style="color: #e50e3a; margin-bottom: 2.5%;">
+                <div><span data-toggle="counter-up">20</span> лет</div>
+                <div class="text_o_nas text-center">Успешной работы<br> нашей фирмы</div>
+            </div>
+            <div class="col-md-6 col-lg-2" style="color: #e50e3a; margin-bottom: 2.5%;">
+                <div><span data-toggle="counter-up">800000</span>+</div>
+                <div class="text_o_nas text-center">Сданных<br>отчетов</div>
+            </div>
+            <div class="col-md-6 col-lg-2" style="color: #e50e3a; margin-bottom: 2.5%;">
+                <div><span data-toggle="counter-up">200 </span></div>
+                <div class="text_o_nas text-center">Обслуживаемых<br>компаний</div>
+            </div>
+            <div class="col-md-6 col-lg-3" style="color: #e50e3a; margin-bottom: 2.5%;">
+                <div><span data-toggle="counter-up">100</span> млн руб</div>
+                <div class="text_o_nas text-center">Экономии денег<br>наших клиентов</div>
+            </div>
+            <div class="col-lg-1"></div>
+            </div>
+        <p><br></p>
     </div>
 </section>
 <section id="services" style="background: #f5f5f5">
