--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -29,6 +29,11 @@
 
     <!-- Main Stylesheet File -->
     <link href="{% static 'main/css/style.css' %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/magnific-popup.css' %}">
+
+    <!-- materialdesign icons CSS -->
+    <link href="{% static 'main/css/materialdesignicons.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/style_2.css' %}">
 
 
 </head>
@@ -116,6 +121,48 @@
         </div>
     </div>
 </header>
+<!--    <nav class="navbar navbar-expand-lg fixed-top navbar-custom sticky">-->
+<!--        <div class="container">-->
+<!--            <div>-->
+<!--                <a href="index-1.html" class="logo text-uppercase">-->
+<!--                    <img src="images/logo-light.png" alt="" class="logo-light" height="35" />-->
+<!--                    <img src="images/logo-dark.png" alt="" class="logo-dark" height="35" />-->
+<!--                </a>-->
+<!--            </div>-->
+
+<!--            &lt;!&ndash; <a class="navbar-brand" href="#">Dealarc</a> &ndash;&gt;-->
+<!--            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"-->
+<!--                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--                <span class="mdi mdi-menu"></span>-->
+<!--            </button>-->
+
+<!--            <div class="collapse navbar-collapse" id="navbarCollapse">-->
+<!--                <ul class="navbar-nav ml-auto">-->
+<!--                    <li class="nav-item active">-->
+<!--                        <a class="nav-link" href="#home">Home</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="#services">Services</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="#features">Features</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="#pricing">Pricing</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="#team">Team</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="#blog">Blog</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="#contact">Contact</a>-->
+<!--                    </li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </nav>-->
 <div class="container" style="max-width: 100%; overflow: hidden">
     <div class ="row" style="margin-top: 103px;">
         <div class="col-lg-6 block_1"><img class="img-fluid" src="{% static 'main/img/ob_photo.png' %}"></div>
@@ -402,6 +449,11 @@
 <script src="{% static 'main/lib/wow/wow.min.js' %}"></script>
 <script src="{% static 'main/lib/waypoints/waypoints.min.js' %}"></script>
 <script src="{% static 'main/lib/counterup/counterup.min.js' %}"></script>
+<!-- JAVASCRIPTS -->
+<script src="{% static 'main/js/jquery.min.js' %}"></script>
+<script src="{% static 'main/js/popper.min.js' %}"></script>
+<script src="{% static 'main/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'main/js/jquery.easing.min.js' %}"></script>
 <!-- Template Main Javascript File -->
 <script src="{% static 'main/js/main.js' %}"></script>
 </body>
