--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -116,7 +116,7 @@
                         <li><a href="#team2">Клиенты</a></li>
                         <li><a href="#footer" style="padding-left: 100px;">8(800)555-35-35</a></li>
                     </ul>
-                </nav><!-- .main-nav -->
+                </nav>
             </div>
         </div>
     </div>
@@ -168,7 +168,7 @@
         <div class="col-lg-6 block_1"><img class="img-fluid" src="{% static 'main/img/ob_photo.png' %}"></div>
         <div class="col-lg-6 block_1 ">
             <div class="col-12">
-                <h1 class="text-left" style="margin-left: 2%;"><span style="color: #e50e3a">Б</span>изнес <span style="color: #e50e3a">А</span>ссистент</h1>
+                <h1 class="text-left" style="margin-left: 2%; font-family: Rubik-ext"><span style="color: #e50e3a">Б</span>изнес <span style="color: #e50e3a">А</span>ссистент</h1>
                 <div class="my_txt text-left">Полный спектр услуг  для успешного ведения бизнеса</div>
 
                 <div class="my_txt text-left typewrite" data-period="1000" data-type='[ "Бухгалтерия", "Налоги", "Юристы" ]' style="color: #e50e3a;"><span class="wrap"></span></div>
