--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -8,7 +8,7 @@
     <title>Бизнес Ассистент</title>
     {% load static %}
 
-    <!-- Bootstrap CSS File -->
+    <!-- Bootstrap CSS Filez -->
     <link href="{% static 'main/lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Libraries CSS Files -->
