--- a/Businessas/qr_code/templates/qr_code/index.html
+++ b/Businessas/qr_code/templates/qr_code/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="{% static 'qr_code/css/qr_code.css' %}">
 
 </head>
-<body style="background-color: #f9f9f9; overflow-x:hidden;">
+<body style="background-color: #f9f9f9; overflow-x: hidden;">
 <div class = "container_eff">
     <div class = "row">
         <div class="col-12">
@@ -44,7 +44,7 @@
         </div>
         <div class="col-1"></div>
     </div>
-    <div class = "row">
+    <div class = "row" style="overflow: hidden">
         <div class="col-1"></div>
         <div class="col-10"><button onclick="window.location.href = 'https://businessas.ru';" type="button" class="my_button2 btn text-center btn-primary btn-sm img-fluid"><img style="width: 30px;"><span style="font-family: 'Rubik_rg';">Наш сайт</span></button></div>
         <div class="col-1"></div>
@@ -57,7 +57,7 @@
     </div>
     <div class = "row">
         <div class="col-1"></div>
-        <div class="col-5"><button onclick="window.location.href = 'https://api.whatsapp.com/send/?phone=+79107480234';" type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/whatsapp.png' %}"><span style="font-family: 'Rubik_rg';">WhatsАpp</span></button></div>
+        <div class="col-5"><button onclick="window.location.href = 'https://wa.me/+79107480234';" type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/whatsapp.png' %}"><span style="font-family: 'Rubik_rg';">WhatsАpp</span></button></div>
         <div class="col-5"><button onclick="window.location.href = 'https://telegram.me/+79107480234';" type="button" class="my_button btn text-center btn-primary btn-sm img-fluid text-start"><img style="width: 30px; margin-right: 10px;" src="{% static 'qr_code/img/telegram.svg' %}"><span style="font-family: 'Rubik_rg';">Telegram</span></button></div>
         <div class="col-1"></div>
     </div>
