--- a/Businessas/main/static/main/lib/bootstrap/css/bootstrap.css
+++ b/Businessas/main/static/main/lib/bootstrap/css/bootstrap.css
@@ -2386,7 +2386,7 @@ textarea.form-control {
   -ms-user-select: none;
   user-select: none;
   background-color: transparent;
-  border: 1px solid transparent;
+  /*border: 1px solid transparent;*/
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
